# fastapi-news-app

./: .dockerignore  Dockerfile  README.md  pyproject.toml
client/: package.json
client/src/: App.css  App.js  index.css
client/src/api/: newsApi.js
server/: app.py  requirements.txt
server/api/: news_api.py
